* MerchantE: only add `moto_commerce_ind` to request if it is present [ajawadmirza] #4560
* Add BpPlus card type along with custom validation logic [dsmcclain] #4559
* PayTrace: Support ACH implementation for new endpoints and request body [ajawadmirza] #4545
* Rapyd: No force capture for ACH [naashton] #4562
* Shift4: Applied checks on Shift4 Time/Timezone offset [ali-hassan] #45611
* Alelo: Add gateway [heavyblade] #4555
* Wompi: Allow partial refund amount on void_sync [jcreiff] #4535
* Shift4: Timezone Offset [naashton] #4566
* MerchantE: `recurring_pmt_num` and `recurring_pmt_count` fields [ali-hassan] #4553
* Orbital: Add South African Rand to supported currencies [molbrown] #4569
* Orbital: Fix CardSecValInd [molbrown] #4563

== Version 1.126.0 (April 15th, 2022)
* Moneris: Add 3DS MPI field support [esmitperez] #4373
* StripePI: Add ability to change payment_method_type to confirm_intent [aenand] #4300
* GlobalCollect: Improve support for Naranja and Cabal card types [dsmcclain] #4286
* Payflow: Add support for stored credentials [ajawadmirza] #4277
* Orbital: Don't void $0 auths for Verify [javierpedrozaing] #2487
* StripePI: Enable Apple Pay and Google Pay payment methods [gasb150] #4252
* PaySafe: Update `unstore` method and authorization for redact [ajawadmirza] #4294
* CyberSource: Add `national_tax_indicator` fields in authorize and purchase [ajawadmirza] #4299
* NMI: Update gateway credentials to accept security_key [javierpedrozaing] #4302
* PaySafe: Fix commit for `unstore` method [ajawadmirza] #4303
* Ebanx: Add support for `order_number` field [ali-hassan] #4304
* BlueSnap: Add support for  `idempotency_key` field [drkjc] #4305
* Paymentez: Update `capture` method to verify by otp for pending transactions [ajawadmirza] #4267
* BlueSnap: Update refund request and endpoint along with merchant transaction support [ajawadmirza] #4307
* DecidirPlus: Added `authorize`, `capture`, `void`, and `verify` methods [ajawadmirza] #4284