@@ -222,13 +222,14 @@ module ActiveMerchant #:nodoc:
       end
 
       def add_card_on_file(post, options)
-        return unless stored_credential = options[:stored_credential]
+        return unless options[:stored_credential] || options[:usage_indicator] || options[:indicator] || options[:scheduled_indicator] || options[:transaction_id]
 
+        stored_credential = options[:stored_credential] || {}
         post[:cardOnFile] = {}
-        post[:cardOnFile][:usageIndicator] = stored_credential[:initial_transaction] ? '01' : '02'
-        post[:cardOnFile][:indicator] = options[:card_on_file_indicator] || '01'
-        post[:cardOnFile][:scheduledIndicator] = RECURRING_TYPE_TRANSACTIONS.include?(stored_credential[:reason_type]) ? '01' : '02' if stored_credential[:reason_type]
-        post[:cardOnFile][:transactionId] = stored_credential[:network_transaction_id] if stored_credential[:network_transaction_id]
+        post[:cardOnFile][:usageIndicator] = options[:usage_indicator] || (stored_credential[:initial_transaction] ? '01' : '02')
+        post[:cardOnFile][:indicator] = options[:indicator] || '01'
+        post[:cardOnFile][:scheduledIndicator] = options[:scheduled_indicator] || (RECURRING_TYPE_TRANSACTIONS.include?(stored_credential[:reason_type]) ? '01' : '02')
+        post[:cardOnFile][:transactionId] = options[:transaction_id] || stored_credential[:network_transaction_id]
       end
 
       def commit(action, parameters, option)
